Fixed overflowing flex container when side menu was shown

--- a/imports/ui/stylesheets/elements/inputbox.less
+++ b/imports/ui/stylesheets/elements/inputbox.less
@@ -41,10 +41,12 @@
 
     input {
       flex: 0.5;
+      min-width: 0
     }
 
     textarea {
       flex: 1;
+      min-width: 0
     }
 
     ::-webkit-input-placeholder {
